# line-shooter

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.bat  package.bat  run.bat
assets/: licenses.md
src/: main.cpp
src/assets/: AssetManager.cpp  AssetManager.hpp
src/audio/: BeepAudio.cpp  BeepAudio.hpp  IAudio.hpp
src/core/: Config.hpp  Game.cpp  Game.hpp  Math.hpp  Time.hpp
src/game/: Combat.cpp  Combat.hpp  Effects.cpp  Effects.hpp  Enemy.cpp  Enemy.hpp  Movement.cpp  Movement.hpp  Player.hpp  Weapon.cpp  Weapon.hpp  World.cpp  World.hpp
src/platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/render/: Framebuffer.hpp  Raycaster.cpp  Raycaster.hpp  Renderer.cpp  Renderer.hpp
src/ui/: Hud.cpp  Hud.hpp
tools/: package_windows.ps1
